# Group_1_Developing_Scientific_Software

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Untitled.ipynb  requirements.txt  setup.cfg  test.ipynb  test.py
.github/workflows/: main.yml
Output/Task1/: Readme.md
Output/Task2/: Readme.md
Task1/: Group1_Task_1.ipynb  Gwydion_Task_1.ipynb  Inga_Task_1.ipynb  npop_out.csv  table_out.txt
Task2/: Gwydion Program Sketch.odp  Programm_Sketch_Tobias.pptx
Task2/module_draft/: analysis.py  main.py  reader.py
Task3/module_draft/: analysis.py  main.py  reader.py  user_input.py
Task3/module_draft/test/: pytest.ini  test_analysis.py  test_main.py  test_reader.py
Task3/test/: pytest.ini  test_main.py  test_reader.py  test_user_input.py
Task4/: test_main.py
doc/source/: conf.py  index.rst
docs/: conf.py  index.rst
docs/source/: modules.rst
src/module_draft/: analysis.py  main.py  pytest.ini  reader.py  user_input.py
src/test/: test_analysis.py  test_reader.py
