[metadata]
# replace with your username:
name = module_draft-GwydionJon-LeonieKreis-ToKa96
version = 0.0.1
author = Gwydion Daskalakis, Leonie Kries, Tobias Kaczun
author_email = daskalakis@stud.uni-heidelberg.de
description = Package developed for the soustainable development course of uni heidelberg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GwydionJon/Group_1_Developing_Scientific_Software
project_urls =
    Bug Tracker = https://github.com/GwydionJon/Group_1_Developing_Scientific_Software/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
